Bug 366797: revise the location bar (highlight effective domain, decode URLs, add overflow ellipsis and tooltip), patch by Dão Gottwald <dao@design-noir.de>, r=me
UltraBlame original commit: a6c15d5b1eeee3232d35cee4b922d7cb68396f1b

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -3,6 +3,10 @@ searchbar {
 }
 
 
+#urlbar {
+  -moz-binding: url(chrome://browser/content/urlbarBindings.xml#urlbar);
+}
+
 #PopupAutoComplete {
   -moz-binding: url("chrome://browser/content/urlbarBindings.xml#urlbar-result-popup");
 }
